--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <title>{{ page.title }}</title>
     
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="{{ '/css/main.css' | relative_url }}">
   
   </head>
 
@@ -11,10 +11,8 @@
   <body>
     <nav>
 <ul>
-<li><a href="/">Home</a></li>
-<li><a href="/about">About</a></li>
-<li><a href="/cv">CV</a></li>
-<li><a href="/blog">Blog</a></li>
+<li><a href="{{ '/' | relative_url }}">Home</a></li>
+<li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
 </ul>
     </nav>
 <div class="container">
@@ -25,8 +23,7 @@
   
   <footer>
    <ul>
-   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+   <li></li>
    </ul>
   </footer>
   </body>
