--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <title>{{ page.title }}</title>
     
-    <link rel="stylesheet" type="text/css" href="{{ '/css/main.css' | relative_url }}">
+    <link rel="stylesheet" type="text/css" href="{{ '/css/main.css'  | relative_url }}">
   
   </head>
 
@@ -23,7 +23,7 @@
   
   <footer>
    <ul>
-   <li></li>
+   <li><a href="https://github.com/vancun/nipybuilder">NiPi Builder GitHub</a></li>
    </ul>
   </footer>
   </body>
