--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,20 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>{{ page.title }}</title>
-    
-    <link rel="stylesheet" type="text/css" href="{{ '/css/main.css'  | relative_url }}">
-  
-  </head>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
+  {%- include head.html -%}
 
   <body>
-    <nav>
-<ul>
-<li><a href="{{ '/' | relative_url }}">Home</a></li>
-<li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
-</ul>
-    </nav>
-<div class="container">
 
-  {{ content }}
+    {%- include header.html -%}
 
-</div>
-  
-  <footer>
-   <ul>
-   <li><a href="https://github.com/vancun/nipybuilder">NiPi Builder GitHub</a></li>
-   </ul>
-  </footer>
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </main>
+
+    {%- include footer.html -%}
+
   </body>
 
 </html>
